<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="sda.oscail.edu.proj05_2019_p_condontemp.ProductDetail" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="#ffffe0"
        tools:context="sda.oscail.edu.proj05_2019_p_condontemp.ProductDetail">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:text="@string/productcode"
            android:textStyle="bold"
            android:textColor="#2f4f4f"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="29dp"
            android:text="@string/classs"
            android:textStyle="bold"
            android:textColor="#2f4f4f"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="29dp"
            android:text="@string/grade"
            android:textStyle="bold"
            android:textColor="#2f4f4f"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="30dp"
            android:text="@string/thickness"
            android:textStyle="bold"
            android:textColor="#2f4f4f"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="29dp"
            android:text="@string/moq"
            android:textStyle="bold"
            android:textColor="#2f4f4f"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="29dp"
            android:text="@string/m2tariff"
            android:textStyle="bold"
            android:textColor="#2f4f4f"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="29dp"
            android:text="@string/description"
            android:textStyle="bold"
            android:textColor="#2f4f4f"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="29dp"
            android:text="@string/jpegimageid"
            android:textStyle="bold"
            android:textColor="#2f4f4f"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <EditText
            android:id="@+id/editTextCustNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextCustName"
            android:layout_above="@+id/textView3"
            android:layout_toEndOf="@+id/textView"
            android:layout_alignEnd="@+id/editTextCustNo" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextTown"
            android:layout_above="@+id/textView4"
            android:layout_toRightOf="@+id/textView3"
            android:layout_alignRight="@+id/editTextCustName"
            android:layout_alignEnd="@+id/editTextCustName" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextCounty"
            android:layout_above="@+id/textView5"
            android:layout_toEndOf="@+id/textView4"
            android:layout_alignEnd="@+id/editTextTown" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextCountry"
            android:layout_above="@+id/textView6"
            android:layout_toEndOf="@+id/textView5"
            android:layout_alignEnd="@+id/editTextCounty" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextPhoneNo"
            android:layout_above="@+id/textView7"
            android:layout_toEndOf="@+id/textView6"
            android:layout_alignEnd="@+id/editTextCountry" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextContactPerson"
            android:layout_above="@+id/textView8"
            android:layout_toEndOf="@+id/textView7"
            android:layout_alignEnd="@+id/editTextPhoneNo" />


        <EditText
            android:id="@+id/editTextJpegImageId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView8"
            android:layout_alignEnd="@+id/editTextContactPerson"
            android:layout_alignStart="@+id/editTextContactPerson"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/buttonSave"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/buttonClose" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:id="@+id/buttonClose"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/btnDelete"
            android:layout_alignParentBottom="true"
            android:layout_alignTop="@+id/buttonSave"
            android:layout_toStartOf="@+id/buttonSave" />

    </RelativeLayout>
</ScrollView>