<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sda.oscail.edu.proj05_2019_p_condontemp.QuoteFragment">

    <LinearLayout
        android:id="@+id/Linear1"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quoteDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="1dip"
            android:paddingTop="6dip"
            android:text="@string/quote_date"
            android:textAlignment="viewEnd"
            android:textColor="#770c7f"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvqdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="1dip"
            android:paddingTop="1dip"
            android:textAlignment="viewEnd"
            android:textColor="#770c7f"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/customertitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="1dip"
            android:paddingTop="6dip"
            android:text="@string/customer"
            android:textAlignment="viewEnd"
            android:textColor="#770c7f"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvcustomer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="6dip"
            android:paddingTop="1dip"
            android:textAlignment="viewStart"
            android:textColor="#db17e9"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/Linear1"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/deliverydatetitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="1dip"
            android:paddingTop="6dip"
            android:text="@string/delivery"
            android:textAlignment="viewEnd"
            android:textColor="#770c7f"
            android:textSize="12sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvdeliverydate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="1dip"
            android:paddingTop="1dip"
            android:textAlignment="viewStart"
            android:textColor="#db17e9"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currencytitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="1dip"
            android:paddingEnd="1dip"
            android:text="@string/currency"
            android:textAlignment="viewEnd"
            android:textColor="#770c7f"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currenc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="1dip"
            android:paddingEnd="1dip"
            android:textAlignment="viewStart"
            android:textColor="#dc1833"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/Linear0">

        <TextView
            android:id="@+id/linesTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="1dip"
            android:paddingEnd="1dip"
            android:text="@string/quotation_sheet_size_2440x1220"
            android:textAlignment="center"
            android:textColor="#770c7f"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Linear2"
        android:orientation="vertical">

    </LinearLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_alignParentBottom="true"
        android:text="@string/back"/>

    <Button
        android:id="@+id/btn_sendquote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Linear1"
        android:layout_alignTop="@+id/btn_back"
        android:layout_gravity="end|bottom"
        android:text="@string/send" />

</RelativeLayout>



